# APR

./: .gitignore  LICENSE  README.md  pyproject.toml
src/data/: countdown.py  generate_apr.py  generate_problems.py  generate_sosp.py  search.py
src/data/scripts/: create_prob.sh  create_search.sh
tests/: conftest.py  test_setup_validation.py
